--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "this is kr ludo backend",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon index.js"
   },
   "author": "Soyal",
   "license": "ISC",
