--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.0.7",
     "axios": "^0.27.2",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cashfree-sdk": "^0.1.1",
     "concurrently": "^7.2.0",
     "cors": "^2.8.5",
