--- a/api/package.json
+++ b/api/package.json
@@ -34,7 +34,9 @@
     "randomstring": "^1.2.2",
     "razorpay": "^2.8.3",
     "react-paginate": "^8.1.3",
+    "semver": "^7.6.3",
     "sharp": "^0.33.5",
+    "simple-update-notifier": "^2.0.0",
     "uuid": "^8.3.2",
     "yarn": "^1.22.19"
   }
