--- a/home/.env
+++ b/home/.env
@@ -1,2 +1,4 @@
-REACT_APP_BACKEND_LOCAL_API='https://api.24wins.in/'
-REACT_APP_BACKEND_LIVE_API='https://api.24wins.in/'
+# REACT_APP_BACKEND_LOCAL_API='https://api.24wins.in/'
+REACT_APP_BACKEND_LOCAL_API='http://localhost:2024'
+
+REACT_APP_BACKEND_LIVE_API='https://api.infayou.shop'
